@@ -1,3 +1,7 @@
+2007-02-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* bin/devdiscover.in: Devdiscover now accepts multiple input files
+
 2007-02-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover.pm:
